--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- 该统计脚本用于官方文档部署，实际使用时请及时删除该代码段 -->
     <script>
       // 百度统计
-      if(location.origin.indexOf('vxeui.com')>-1){var _hmt=_hmt||[];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?d7f93b6aca1d7ac7711f6c21b897a62c";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm,s)})()}else if(location.origin.indexOf('vxetable.cn')>-1){var _hmt=_hmt||[];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?1eb3cea61a6e722c5e3dd0114830306c";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm,s)})()}
+      var _hmt=_hmt||[];!function(){var e="";if(location.origin.indexOf("vxetable")>-1?e="1eb3cea61a6e722c5e3dd0114830306c":location.origin.indexOf("vxeui")>-1&&(e="d7f93b6aca1d7ac7711f6c21b897a62c"),e){var a=document.createElement("script");a.src="https://hm.baidu.com/hm.js?"+e;var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(a,t)}}();
     </script>
     <!-- 该统计脚本用于官方文档部署，实际使用时请及时删除该代码段 -->
   </head>
@@ -25,7 +25,7 @@
     <!-- 该统计脚本用于官方文档部署，实际使用时请及时删除该代码段 -->
     <script>
       // 右侧广告
-      if(location.origin.indexOf('vxetable')>-1){var wwadsElem=document.createElement('div')wwadsElem.className='wwads-cn wwads-vertical'wwadsElem.setAttribute('data-id',"214")wwadsElem.style='position: fixed;bottom: 0;right: 0;max-width:200px'document.body.appendChild(wwadsElem)(function(){var ad=document.createElement("script");ad.src="https://cdn.wwads.cn/js/makemoney.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(ad,s)})()}
+      !function(){if(location.origin.indexOf("vxetable")>-1){var e=document.createElement("div");e.className="wwads-cn wwads-vertical",e.setAttribute("data-id","214"),e.style="position: fixed;bottom: 0;right: 0;max-width:200px",document.body.appendChild(e);var t=document.createElement("script");t.src="https://cdn.wwads.cn/js/makemoney.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(t,a)}}();
     </script>
     <!-- 该统计脚本用于官方文档部署，实际使用时请及时删除该代码段 -->
 
