--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" data-build-time="<%= VITE_APP_BUILD_TIME %>">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="icon" href="/favicon.ico">
