--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
     <!-- 该统计脚本用于官方文档部署，实际使用时请及时删除该代码段 -->
     <script>
-      // 百度统计
-      var _hmt=_hmt||[];!function(){var e="";if(location.origin.indexOf("vxetable")>-1?e="1eb3cea61a6e722c5e3dd0114830306c":location.origin.indexOf("vxeui")>-1&&(e="d7f93b6aca1d7ac7711f6c21b897a62c"),e){var a=document.createElement("script");a.src="https://hm.baidu.com/hm.js?"+e;var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(a,t)}}();
+      var _hmt=_hmt||[];(function(){var a="",b=location.hostname;-1<b.indexOf("vxetable.cn")?a="1eb3cea61a6e722c5e3dd0114830306c":-1<b.indexOf("vxeui.com")&&(a="d7f93b6aca1d7ac7711f6c21b897a62c");a&&(b=document.createElement("script"),b.src="https://hm.baidu.com/hm.js?"+a,a=document.getElementsByTagName("script")[0],a.parentNode.insertBefore(b,a))})();
     </script>
     <!-- 该统计脚本用于官方文档部署，实际使用时请及时删除该代码段 -->
   </head>
@@ -25,8 +24,7 @@
 
     <!-- 该统计脚本用于官方文档部署，实际使用时请及时删除该代码段 -->
     <script>
-      // 右侧广告
-      !function(){if(location.origin.indexOf("vxetable")>-1){var e=document.createElement("div");e.className="wwads-cn wwads-vertical",e.setAttribute("data-id","214"),e.style="position: fixed;bottom: 0;right: 0;max-width:200px",document.body.appendChild(e);var t=document.createElement("script");t.src="https://cdn.wwads.cn/js/makemoney.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(t,a)}}();
+      (function(){var b="",a=location.hostname;-1<a.indexOf("vxetable.cn")?b="214":-1<a.indexOf("vxeui.com")&&(b="344");b&&(a=document.createElement("div"),a.className="wwads-cn wwads-vertical",a.setAttribute("data-id",b),a.style="position: fixed;bottom: 0;right: 0;max-width:200px",document.body.appendChild(a),b=document.createElement("script"),b.src="https://cdn.wwads.cn/js/makemoney.js",a=document.getElementsByTagName("script")[0],a.parentNode.insertBefore(b,a))})();
     </script>
     <!-- 该统计脚本用于官方文档部署，实际使用时请及时删除该代码段 -->
 
